--- a/index.ipynb
+++ b/index.ipynb
@@ -105,6 +105,9 @@
    "outputs": [],
    "source": [
     "## your code here\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
     "\n"
    ]
   },
