Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -107,6 +107,8 @@
     "## your code here\n",
     "\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "\n",
     "\n",
     "\n"
    ]
