Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "\n",
-    "poly =\n",
+    "poly = PolynomialFeatures(2)\n",
     "\n"
    ]
   },
