Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,6 +110,7 @@
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "\n",
     "poly = PolynomialFeatures(2)\n",
+    "x_fin = poly.fit_transform(x)\n",
     "\n"
    ]
   },
