--- a/index.ipynb
+++ b/index.ipynb
@@ -111,6 +111,8 @@
     "\n",
     "poly = PolynomialFeatures(2)\n",
     "x_fin = poly.fit_transform(x)\n",
+    "\n",
+    "reg_pol\n",
     "\n"
    ]
   },
