--- a/index.ipynb
+++ b/index.ipynb
@@ -112,7 +112,7 @@
     "poly = PolynomialFeatures(2)\n",
     "x_fin = poly.fit_transform(x)\n",
     "\n",
-    "reg_pol\n",
+    "reg_poly = LinearRegression().fit(X-fin.y)\n",
     "\n"
    ]
   },
