Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -112,7 +112,8 @@
     "poly = PolynomialFeatures(2)\n",
     "x_fin = poly.fit_transform(x)\n",
     "\n",
-    "reg_poly = LinearRegression().fit(X-fin.y)\n",
+    "reg_poly = LinearRegression().fit(x-fin.y)\n",
+    "predict_x = reg_poly.predict(x_fin)\n",
     "\n"
    ]
   },
