--- a/index.ipynb
+++ b/index.ipynb
@@ -108,6 +108,7 @@
     "\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
     "\n",
     "poly = PolynomialFeatures(2)\n",
     "x_fin = poly.fit_transform(x)\n",
